--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,6 +69,7 @@
                 android:singleLine="true"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                 android:textColor="@android:color/primary_text_dark"
+                android:textColorHighlight="@android:color/secondary_text_dark"
                 android:textColorHint="@android:color/tertiary_text_dark" />
 
             <ProgressBar
