--- a/app/src/main/res/layout/device_card.xml
+++ b/app/src/main/res/layout/device_card.xml
@@ -30,7 +30,7 @@
             android:indeterminate="true" />
 
         <TextView
-            android:id="@+id/text"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -38,9 +38,10 @@
             android:textAppearance="@android:style/TextAppearance.Material.Title" />
 
         <TextView
+            android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/text"
+            android:layout_below="@id/name"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="20dp" />
