--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,6 +16,11 @@
         <item
             android:icon="@drawable/ic_notifications"
             android:title="@string/nav_notifications" />
+
+        <item
+            android:id="@+id/nav_about"
+            android:icon="@drawable/ic_info"
+            android:title="@string/nav_about" />
     </group>
 
 </menu>
