--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#212121</color>
     <color name="colorPrimaryDark">#212121</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#B03866</color>
     <color name="green">#9ccc65</color>
     <color name="red">#ef5350</color>
 </resources>
