--- a/app/src/main/res/drawable/edit_text_border.xml
+++ b/app/src/main/res/drawable/edit_text_border.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#22ffffff" />
+    <solid android:color="@color/transparentGrey" />
     <corners
         android:bottomLeftRadius="@dimen/login_input_radius"
         android:bottomRightRadius="@dimen/login_input_radius"
