--- a/app/src/main/res/drawable/login_button_normal.xml
+++ b/app/src/main/res/drawable/login_button_normal.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="135"
-        android:endColor="#e53935"
-        android:startColor="#5e35b1"
+        android:endColor="@color/orange"
+        android:startColor="@color/purple"
         android:type="linear" />
     <corners
         android:bottomLeftRadius="@dimen/login_input_radius"
