--- a/app/src/main/res/drawable/login_button_pressed.xml
+++ b/app/src/main/res/drawable/login_button_pressed.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="135"
-        android:endColor="#d32f2f"
-        android:startColor="#512da8"
+        android:endColor="@color/orange"
+        android:startColor="@color/purpleDark"
         android:type="linear" />
     <corners
         android:bottomLeftRadius="@dimen/login_input_radius"
