--- a/app/src/main/res/layout/activity_login_transition.xml
+++ b/app/src/main/res/layout/activity_login_transition.xml
@@ -35,7 +35,7 @@
             android:layout_centerHorizontal="true"
             android:alpha="0"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
-            android:textColor="#ef5350" />
+            android:textColor="@color/red" />
 
         <RelativeLayout
             android:id="@+id/first_row"
@@ -54,7 +54,8 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="15dp"
                 android:contentDescription="@string/server_icon"
-                android:src="@drawable/ic_server" />
+                android:src="@drawable/ic_server"
+                android:tint="@color/whiteGrey"/>
 
             <EditText
                 android:id="@+id/edit_server_url"
@@ -79,7 +80,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="15dp"
                 android:alpha="0"
-                android:indeterminateTint="#FF9e9e9e" />
+                android:indeterminateTint="@color/whiteGrey" />
 
             <ImageView
                 android:id="@+id/server_check_image"
@@ -110,7 +111,8 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="15dp"
                 android:contentDescription="@string/username_icon"
-                android:src="@drawable/ic_user" />
+                android:src="@drawable/ic_user"
+                android:tint="@color/whiteGrey"/>
 
             <EditText
                 android:id="@+id/edit_username"
@@ -146,7 +148,8 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="15dp"
                 android:contentDescription="@string/lock_icon"
-                android:src="@drawable/ic_locked" />
+                android:src="@drawable/ic_locked"
+                android:tint="@color/whiteGrey"/>
 
             <EditText
                 android:id="@+id/edit_password"
@@ -206,7 +209,8 @@
                 android:layout_centerInParent="true"
                 android:alpha="0"
                 android:contentDescription="@string/result_icon"
-                android:elevation="5dp" />
+                android:elevation="5dp"
+                android:tint="@android:color/white"/>
 
         </RelativeLayout>
 
