--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="colorAccent">#B03866</color>
     <color name="green">#9ccc65</color>
     <color name="red">#ef5350</color>
+    <color name="orange">#d32f2f</color>
+    <color name="purple">#5e35b1</color>
+    <color name="purpleDark">#512da8</color>
+    <color name="whiteGrey">#FF9e9e9e</color>
+    <color name="transparentGrey">#22ffffff</color>
 </resources>
