--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="nav_header_vertical_spacing">20dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="login_input_radius">25dp</dimen>
+    <dimen name="fab_radius">56dp</dimen>
 </resources>
