--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_scanner"
+            android:icon="@drawable/ic_scan"
+            android:title="@string/scanner"/>
+        <item
             android:id="@+id/nav_connections"
             android:icon="@drawable/ic_storage"
             android:title="@string/nav_connections" />
